--- a/src/app/visual/flyout/flyout-demo.component.html
+++ b/src/app/visual/flyout/flyout-demo.component.html
@@ -1,15 +1,28 @@
-<b>Flyout component</b>
+<h1>
+  Flyout component
+</h1>
+
 <sky-dropdown buttonType="context-menu">
-    <sky-dropdown-menu>
-        <sky-dropdown-item>
-            <button type="button">
-            Option 1
-            </button>
-        </sky-dropdown-item>
-        <sky-dropdown-item>
-            <button type="button">
-            Option 2
-            </button>
-        </sky-dropdown-item>
-    </sky-dropdown-menu>
+  <sky-dropdown-menu>
+    <sky-dropdown-item>
+      <button type="button">
+        Option 1
+      </button>
+    </sky-dropdown-item>
+    <sky-dropdown-item>
+      <button type="button">
+        Option 2
+      </button>
+    </sky-dropdown-item>
+  </sky-dropdown-menu>
 </sky-dropdown>
+
+<p>
+  <button
+    class="sky-btn sky-btn-default"
+    type="button"
+    (click)="openModal()"
+  >
+    Open modal
+  </button>
+</p>
